--- a/pgt52m/week-7/workshop.qmd
+++ b/pgt52m/week-7/workshop.qmd
@@ -131,9 +131,8 @@ sample sizes and standard errors.
 ![](images/do_in_R.png) Create a data frame called `adip_summary` that
 contains the means, standard deviations, sample sizes and standard
 errors for the control and nicotinic acid treated samples. You may need
-to read the [Summarise
-section](../week-4/workshop.html#summarise) from the Week 4
-workshop [@rand2023]
+to read the [Summarise section](../week-4/workshop.html#summarise) from
+the Week 4 workshop [@rand2023]
 
 ```{r}
 #| include: false  
@@ -274,8 +273,8 @@ shapiro.test(mod$residuals)
 ### Illustrating
 
 ![](images/do_in_R.png) Create a figure like the one below. You may need
-to refer to [Visualise](../week-4/workshop.html#visualise)
-from the "Summarising data with several variables" workshop [@rand2023]
+to refer to [Visualise](../week-4/workshop.html#visualise) from the
+"Summarising data with several variables" workshop [@rand2023]
 
 ```{r}
 #| echo: false
@@ -305,10 +304,10 @@ compared and the *p*-value. The `annotate()` function can be used to
 draw the line and then to add the value. The line is a `segment` and the
 *p*-value is a `text`.
 
-#### Annotation - method 1
+#### Annotation - method 1 {@week-7-annotation-method-1}
 
-You can annotate the *p*-value manually by typing it in to the appropriate
-`annotate()` function. 
+You can annotate the *p*-value manually by typing it in to the
+appropriate `annotate()` function.
 
 ![](images/do_in_R.png) Add annotation to the figure by adding:
 
@@ -323,22 +322,21 @@ annotate("text", x = 1.5,  y = 11.7,
  .....
 ```
 
--   `annotate("segment", ...)` adds a line to the figure starting at
-    *x = 1* and *y = 11.3* and ending at *x = 2* and *y = 11.3*
--   `annotate("text", ...)` adds text to the figure at *x = 1.5* and
-    *y = 11.7*
--   the `label` is written in R’s plotmath syntax rather than being a 
-    normal string. 
+-   `annotate("segment", ...)` adds a line to the figure starting at *x
+    = 1* and *y = 11.3* and ending at *x = 2* and *y = 11.3*
+-   `annotate("text", ...)` adds text to the figure at *x = 1.5* and *y
+    = 11.7*
+-   the `label` is written in R’s plotmath syntax rather than being a
+    normal string.
     -   `italic(p)` renders the letter *p* in italics
-    -   `==` is the plotmath symbol for "=" 
--   `parse = TRUE` tells ggplot2 to interpret that string as a
-    plotmath expression rather than literally adding "italic(p) == 0.0028". 
+    -   `==` is the plotmath symbol for "="
+-   `parse = TRUE` tells ggplot2 to interpret that string as a plotmath
+    expression rather than literally adding "italic(p) == 0.0028".
 
+However, it is more reproducible to extract the *p*-value from the model
+object.
 
-However, it is more reproducible to extract the *p*-value from the model 
-object. 
-
-#### Annotation - method 2
+#### Annotation - method 2 {@week-7-annotation-method-2}
 
 ![](images/do_in_R.png) Extract the *p*-value from the model object:
 
@@ -346,11 +344,12 @@ object.
 p_value <- broom::glance(mod) |> pull(p.value) |> round(4)
 ```
 
--   **`broom** is a package that turns model outputs into more easy to use tidy 
-    formats
--   **`glance(mod)`** puts information from mod including the *p*-value into a 
+-   **\`broom** is a package that turns model outputs into more easy to
+    use tidy formats
+-   **`glance(mod)`** puts information from mod including the *p*-value
+    into a dataframe
+-   `pull(p.value)` extracts the value from *p*-value column in the
     dataframe
--   `pull(p.value)` extracts the value from *p*-value column in the dataframe
 -   `round(4)` rounds the *p*-value to 4 decimal places
 
 The segment and text can then be added to the figure.
@@ -367,12 +366,12 @@ The segment and text can then be added to the figure.
                               parse = TRUE)) +
 .....
 ```
--  The glue package allows us to use R objects in strings so their v
-   values are printed.
--  We use curly braces `{}` a round the R object so it is understood as an 
-   R object and its value is written rather than literally writing "p_value"
 
-
+-   The glue package allows us to use R objects in strings so their v
+    values are printed.
+-   We use curly braces `{}` a round the R object so it is understood as
+    an R object and its value is written rather than literally writing
+    "p_value"
 
 ```{r}
 #| echo: false
@@ -517,9 +516,6 @@ conclusion in a form suitable for a report.
 
 <!-- on Moss (median = 5) (W = 78; n1 = 10, n2 = 10; p = 0.03546). -->
 
-
-
-
 ### Illustrating
 
 A box plot is a usually good choice for illustrating a two-sample
@@ -532,13 +528,13 @@ ggplot(data = grouse, aes(x = estate, y = nematodes) ) +
   geom_boxplot() 
 ```
 
-
 ![](images/do_in_R.png) Annotate and format the figure so it is more
 suitable for a report and save it to your figures folder.
 
 ::: callout-tip
 If you want to use method 2 for annotating the *p*-value, you can
 extract the *p*-value with
+
 ```{r}
 p_value <- wilcox.test(data = grouse, nematodes ~ estate) |> 
   broom::tidy() |> 
@@ -547,6 +543,7 @@ p_value <- wilcox.test(data = grouse, nematodes ~ estate) |>
 
 ```
 :::
+
 ```{r}
 #| include: false  
 
@@ -575,7 +572,6 @@ ggsave("figures/grouse.png",
        units = "in",
        dpi = 300)
 ```
-
 
 ## Gene Expression
 
@@ -639,18 +635,16 @@ expression because `h` come before `l` in the alphabet. The
 from higher to lower temperatures. You can ignore the rest of the
 output.
 
-![](images/do_in_R.png) If you prefer, you can use the `anova()` 
+![](images/do_in_R.png) If you prefer, you can use the `anova()`
 function on the model object:
 
 ```{r}
 anova(mod)
 ```
 
-This presents you with less information. The *p*-value for the 
-effect of temperate on gene expression will always be the same as in 
-the larger table.
-
-
+This presents you with less information. The *p*-value for the effect of
+temperate on gene expression will always be the same as in the larger
+table.
 
 ![](images/answer.png) State your conclusion from the test in a form
 suitable for including in a report. Make sure you give the direction of
@@ -693,14 +687,12 @@ visible on the webpage.
 
 The `workshop.qmd` file is the file I use to compile the practical. Qmd
 stands for Quarto markdown. It allows code and ordinary text to be
-interweaved to produce well-formatted reports including webpages.  View
+interweaved to produce well-formatted reports including webpages. View
 the source code for this workshop using the `</> Code` button at the top
-of the page.
-Coding and thinking answers are marked with `#---CODING ANSWER---` and
-`#---THINKING ANSWER---`
+of the page. Coding and thinking answers are marked with
+`#---CODING ANSWER---` and `#---THINKING ANSWER---`
 
-Pages made with R [@R-core], Quarto [@allaire2022], `knitr` 
-[@knitr1; @knitr2; @knitr3],
-`kableExtra` [@kableExtra]
+Pages made with R [@R-core], Quarto [@allaire2022], `knitr` [@knitr1;
+@knitr2; @knitr3], `kableExtra` [@kableExtra]
 
 # References
