--- a/r4babs2/week-6/study_before_workshop.qmd
+++ b/r4babs2/week-6/study_before_workshop.qmd
@@ -5,7 +5,5 @@ toc: true
 toc-location: right
 ---
 
-1.  📖 Read [Association](https://3mmarand.github.io/comp4biosci/association.html) 
-
-
-
+1.  📖 Read
+    [Association](https://3mmarand.github.io/comp4biosci/association.html)
